change env name to follow the openai gym

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,10 @@
 .python-version
 
 # python
-*/__pycache__
+*/__pycache__/
 __pycache__/
 # pip
 *.egg-info/
 build/
 dist/
+gym_watertank.egg-info/
